Build: Automatically patch execution tasks to run on module path